--- a/04.Python_Conditional.ipynb
+++ b/04.Python_Conditional.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. 조건문"
+    "# 4. 조건문\n",
+    "--------------------------------------------"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## if else 구문\n",
+    "## `if-else` 구문\n",
     "\n",
     "### Statement\n",
     "\n",
@@ -30,12 +31,18 @@
     "\n",
     "프로그래머가 명시한 ```if```의 조건이 ```True```인가 ```False```인가에 따라 실행하는 문장(statement)이 달라지는 구문\n",
     " * 테스트 구문은 항상 ```True``` 혹은 ```False```로 계산된다.\n",
+    " \n",
+    " \n",
     " * ```if```절의 다음에는 만약 테스트 결과가 ```True```일 경우 실행될 코드 블록이 나타난다.\n",
     "    * 만약 테스트 구문이 ```False```로 판명나면 실행하지 않는다.\n",
+    "    \n",
+    "    \n",
     " * 추가적으로 만약 테스트 구문이 ```False```일 때 할 일을 나타낼 수 있다.\n",
     "    * 이에 해당되는 코드는 ```else``` 혹은 ```elif```의 구문에서 나타난다.\n",
     "\n",
+    "<p style=\"text-align: center;\">\n",
     "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true\" width=\"250\" height=\"175\" />\n",
+    "</p>\n",
     "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
    ]
   },
@@ -89,11 +96,21 @@
     "```\n",
     "    \n",
     "* ```if```문과 ```else```의 마지막에 ```:```를 포함하여야 한다.\n",
+    "\n",
+    "\n",
     "* ```if```문은 test 조건문이 ```True```일 경우에 실행되는 코드 블록을 포함함.\n",
+    "\n",
+    "\n",
     "* ```else``` 문은 ```if``` 문에있는 조건식이 ```0``` 또는 ```False``` 값으로 해석될 때 실행되는 코드 블록을 포함함.\n",
+    "\n",
+    "\n",
     "* ```if```문과 ```else```의 내용은 들여쓰기(indentation)를 해야 함.\n",
+    "\n",
+    "\n",
     "* 하나의 ```if```에 대응되는 ```else```는 많아야 한 개  \n",
     "  * 필요가 없을 경우 ```else``` 문은 생략 가능 \n",
+    "\n",
+    "\n",
     "* 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능\n",
     "\n",
     "```\n",
@@ -338,169 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### nested ```if``` statement\n",
-    "\n",
-    "* 하나의 조건을 검사한 후에, 또다른 조건을 검사해야 될 필요가 있을 수 있다.\n",
-    "* 이러한 경우 중첩된 ```if``` 구문을 사용할 수 있다.\n",
-    "* 하나의 ```if```문 혹은 ```else```문 내에 또다른 ```if```,```else``` 구문이 나타날 수 있다.\n",
-    "   * 마찬가지로 ```if```문 내에 ```if```문 내에 ```if```문이 등장할 수도 있다.\n",
-    "* 최소값을 찾는 다음의 코드가 옳게 작동하는지 살펴 보고, 잘못된 부분이 있으면 개선하여 보자."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y is the least\n"
-     ]
-    }
-   ],
-   "source": [
-    "x=10\n",
-    "y=5\n",
-    "z=2\n",
-    "if x<y:\n",
-    "    if x<z:\n",
-    "        print(\"x is the least\")\n",
-    "    else:\n",
-    "        print(\"z is the least\")\n",
-    "else: print(\"y is the least\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ```elif```을 통한 조건 추가 \n",
-    "\n",
-    "```elif``` 의 문법\n",
-    "\n",
-    "```\n",
-    "if expression1:  \n",
-    "  statement1(s)  \n",
-    "elif expression2:  \n",
-    "  statement2(s)  \n",
-    "elif expression3:  \n",
-    "  statement3(s)  \n",
-    "else:  \n",
-    "  statement4(s)\n",
-    "```\n",
-    "\n",
-    "\n",
-    "* ```elif``` 문을 사용하면 여러 표현식을 검사하고, 조건 중 하나가 ```True```로 판정되는 코드 블록을 실행\n",
-    "* ```else```와 마찬가지로 ```elif``` 프로그램의 목적에 따라 생략이 될 수 있음\n",
-    "* 그러나 많아야 한 번 등장하는 ```else```와는 달리, ```if``` 다음에 임의의 수의 ```elif``` 문이 있을 수 있음"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "z is the least\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 10\n",
-    "y = 5\n",
-    "z = 2\n",
-    "if x < y and x < z: print(\"x is the least\")\n",
-    "elif y < z: print(\"y is the least\")\n",
-    "else: print(\"z is the least\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* ```if```문에서 ```and``` 를 이용하여 두 조건을 동시에 넣은 것에 주의\n",
-    "* ```if```의 조건에 해당하지 않으면 (x가 최소값이 아니라면), 두 번째 조건이 ```elif``` 뒤에 명시되는 것을 확인"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 예제"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "three digit number\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 123\n",
-    "if x < 10:\n",
-    "    print('one digit number')\n",
-    "elif x < 100:\n",
-    "    print('two digit number')\n",
-    "elif x < 1000:\n",
-    "    print('three digit number')\n",
-    "else:\n",
-    "    print('large number')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 예제 \n",
-    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다. 스스로 작성하여 보자."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Divisible by 3 and not by 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 15\n",
-    "if x%2 == 0:\n",
-    "    if x%3 == 0:\n",
-    "        print('Divisible by 2 and 3')\n",
-    "    else:\n",
-    "        print('Divisible by 2 and not by 3')\n",
-    "else:\n",
-    "    if x%3 == 0:\n",
-    "        print('Divisible by 3 and not by 2')\n",
-    "    else:\n",
-    "        print('Not divisible by both of 2 and 3')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 예제"
+    "#### 예제 : 조건문 안에 ```and```를 이용하여 여러 조건을 검사"
    ]
   },
   {
@@ -547,8 +402,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제\n",
-    "```input()``` 함수와 결합한 예제"
+    "#### ```and```를 이용할 때 흔히 하는 실수\n",
+    "\n",
+    "주어진 ```x```가 ```y```보다도 크고, ```z```보다도 큰 지 검사하고 싶을 때"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is larger than both y and z.\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 잘못된 예제\n",
+    "x, y, z  = 10, 2, 11\n",
+    "if x > y and z:\n",
+    "    print(\"x is larger than both y and z.\")\n",
+    "else:\n",
+    "    print(\"x is less than or equal to one of y or z.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```and```의 양쪽에는 ```True``` 혹은 ```False```가 판별되는 정확한 문장이 와야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is less than or equal to one of y or z.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, z  = 10, 2, 11\n",
+    "if x > y and x > z:\n",
+    "    print(\"x is larger than both y and z.\")\n",
+    "else:\n",
+    "    print(\"x is less than or equal to one of y or z.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제 : ```input()``` 함수와 결합한 예제"
    ]
   },
   {
@@ -611,6 +524,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### nested ```if``` statement\n",
+    "\n",
+    "* 하나의 조건을 검사한 후에, 또다른 조건을 검사해야 될 필요가 있을 수 있다.\n",
+    "* 이러한 경우 중첩된 ```if``` 구문을 사용할 수 있다.\n",
+    "* 하나의 ```if```문 혹은 ```else```문 내에 또다른 ```if```,```else``` 구문이 나타날 수 있다.\n",
+    "   * 마찬가지로 ```if```문 내에 ```if```문 내에 ```if```문이 등장할 수도 있다.\n",
+    "* 최소값을 찾는 다음의 코드가 옳게 작동하는지 살펴 보고, 잘못된 부분이 있으면 개선하여 보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y is the least\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x, y, z 중 서로 같은 값은 없다고 가정\n",
+    "x = 10\n",
+    "y = 5\n",
+    "z = 2\n",
+    "if x < y:\n",
+    "    if x < z:\n",
+    "        print(\"x is the least\")\n",
+    "    else:\n",
+    "        print(\"z is the least\")\n",
+    "else: print(\"y is the least\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ```elif```을 통한 조건 추가 \n",
+    "\n",
+    "```elif``` 의 문법\n",
+    "\n",
+    "```\n",
+    "if expression1:  \n",
+    "  statement1(s)  \n",
+    "elif expression2:  \n",
+    "  statement2(s)  \n",
+    "elif expression3:  \n",
+    "  statement3(s)  \n",
+    "else:  \n",
+    "  statement4(s)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "* ```elif``` 문을 사용하면 여러 표현식을 검사하고, 조건 중 하나가 ```True```로 판정되는 코드 블록을 실행\n",
+    "* ```else```와 마찬가지로 ```elif``` 프로그램의 목적에 따라 생략이 될 수 있음\n",
+    "* 그러나 많아야 한 번 등장하는 ```else```와는 달리, ```if``` 다음에 임의의 수의 ```elif``` 문이 있을 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z is the least\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x, y, z 중 서로 같은 값은 없다고 가정\n",
+    "x = 10\n",
+    "y = 5\n",
+    "z = 2\n",
+    "if x < y and x < z: print(\"x is the least\")\n",
+    "elif y < z: print(\"y is the least\")\n",
+    "else: print(\"z is the least\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ```if```문에서 ```and``` 를 이용하여 두 조건을 동시에 넣은 것에 주의\n",
+    "* ```if```의 조건에 해당하지 않으면 (x가 최소값이 아니라면), 두 번째 조건이 ```elif``` 뒤에 명시되는 것을 확인"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 예제\n",
+    "#### `elif`를 이용한 예제 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "three digit number\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 123\n",
+    "if x < 10:\n",
+    "    print('one digit number')\n",
+    "elif x < 100:\n",
+    "    print('two digit number')\n",
+    "elif x < 1000:\n",
+    "    print('three digit number')\n",
+    "else:\n",
+    "    print('large number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위 코드를 ```elif```없이 작성한다면 어떻게 될까?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `elif`를 이용한 예제 2\n",
+    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다. 스스로 작성하여 보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Divisible by 3 and not by 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 15\n",
+    "if x%2 == 0:\n",
+    "    if x%3 == 0:\n",
+    "        print('Divisible by 2 and 3')\n",
+    "    else:\n",
+    "        print('Divisible by 2 and not by 3')\n",
+    "else:\n",
+    "    if x%3 == 0:\n",
+    "        print('Divisible by 3 and not by 2')\n",
+    "    else:\n",
+    "        print('Not divisible by both of 2 and 3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Inline ```if-else``` statements\n",
     "Python은 다음과 같이 ```if else```를 한 라인에 작성할 수 있도록 지원한다."
    ]
@@ -665,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 연습문제\n",
+    "## 연습문제\n",
     "\n",
     "다음의 연습문제들은 2, 3 단원의 내용만을 이용하여 작성해 보라.\n",
     "\n",
@@ -770,7 +855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -784,9 +869,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
