--- a/06.Python_Function.ipynb
+++ b/06.Python_Function.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. 함수"
+    "# 6. 함수\n",
+    "---------"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### 함수 - function\n",
+    "## 함수 (function) 개요\n",
+    "------\n",
     "\n",
     "* 함수는 하나의 관련 작업을 수행하는 데 사용되는 재사용 가능한 코드 블록이다.\n",
     "  * 함수는 응용 프로그램의 모듈성을 높이고 코드 재사용 수준을 높인다.\n",
@@ -49,9 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 함수 예제\n",
+    "### 예제\n",
     "\n",
-    "* 제곱 후 1을 더해서 반환하는 함수"
+    "#### 제곱 후 1을 더해서 반환하는 함수"
    ]
   },
   {
@@ -109,9 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 함수 예제(2)\n",
-    "\n",
-    " * 제곱근 반환 함수"
+    "#### 제곱근 반환 함수"
    ]
   },
   {
@@ -137,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 함수 사용\n",
+    "### 함수 사용하기\n",
     "\n",
     "* 함수를 정의하였으면 이를 활용할 수 있음"
    ]
@@ -341,8 +343,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 인자가 없는 경우\n",
-    "* 함수는 아무런 인자를 받지 않을 수 있음\n",
+    "## 매개 변수 (parameter)와 인자 (argument)\n",
+    "--------------\n",
+    "\n",
+    "매개 변수와 인자는 혼용되어 사용될 수 있으나, 매개변수는 함수 정의에서 괄호 안에 나열된 변수를 의미하고, 인수는 함수가 호출될 때 함수로 전송되는 값을 나타낸다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 매개 변수가 없는 함수\n",
+    "* 어떤 함수는 아무런 인자를 받지 않을 수 있으며 이에 따라 아무런 매개 변수가 정의되지 않는다.\n",
     "* 빈 괄호 ()로 표현된다."
    ]
   },
@@ -401,7 +413,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-46fdeebb8fc1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput is :\u001b[39m\u001b[38;5;124m\"\u001b[39m, stri)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mprintme\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'stri'"
      ]
     }
@@ -450,7 +462,7 @@
    "source": [
     "### 여러 개의 인자를 받는 함수\n",
     "\n",
-    "* 함수는 여러 개의 인자를 받을 수 있다."
+    "* 함수는 여러 개의 인자를 받을 수 있으며, 대응되는 매개 변수들의 리스트가 괄호 안에 표현된다."
    ]
   },
   {
@@ -510,67 +522,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 여러 개의 인자를 받는 함수(2)\n",
-    "\n",
-    "* 최대공약수를 구하는 함수"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def my_GCD(x, y):\n",
-    "    j = 1\n",
-    "    ans = 1\n",
-    "    while j <= x and j <= y:\n",
-    "        if x%j == 0 and y%j == 0:\n",
-    "            ans = j\n",
-    "        j += 1\n",
-    "    return ans"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_GCD(24, 84)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 최소공배수를 구하는 함수도 만들어 보자."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 예제"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,12 +538,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 다음은 동치"
+    "다음의 표현은 동치이다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -607,6 +560,58 @@
     "printName('Kyungsub', 'Lee', False)\n",
     "printName('Kyungsub', 'Lee', reverse=False)\n",
     "printName(lastName='Lee', firstName='Kyungsub', reverse=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 최대공약수를 구하는 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def my_GCD(x, y):\n",
+    "    j = 1\n",
+    "    ans = 1\n",
+    "    while j <= x and j <= y:\n",
+    "        if x%j == 0 and y%j == 0:\n",
+    "            ans = j\n",
+    "        j += 1\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_GCD(24, 84)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "최소공배수를 구하는 함수도 만들어 보자."
    ]
   },
   {
@@ -690,6 +695,14 @@
    "source": [
     "printinfo( age=50, name=\"miki\" )\n",
     "printinfo( name=\"miki\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scope\n",
+    "--------------"
    ]
   },
   {
@@ -802,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  변수  scope 더 살펴보기\n",
+    "###  변수  scope 더 살펴보기\n",
     "\n",
     "변수의 scope는 해당 변수가 파이썬 인터프리터에게 보이거나 액세스 가능한 범위를 나타낸다.\n",
     "\n",
@@ -864,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 농장 문제\n",
+    "## 농장 문제\n",
     "\n",
     "* 농장에 돼지들과 닭들이 있다. 총 머리의 수는 20개, 총 다리의 수는 56개이다. 돼지와 닭의 수는 각각 얼마인가?\n",
     " * Brute force 방법으로 풀어보자."
@@ -951,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### None\n",
+    "### `None`\n",
     "\n",
     "* Python에서 없는 값을 나타내기 위해 사용되는 값\n",
     "* None을 이용하여 해가 없는 경우를 대비하여 보자."
@@ -1006,13 +1019,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of heads :  7\n",
+      "Enther the number of legs :  18\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of heads : 30\n",
-      "Enther the number of legs : 90\n",
-      "Number of pigs :  15\n",
-      "Number of chickens :  15\n"
+      "Number of pigs :  2\n",
+      "Number of chickens :  5\n"
      ]
     }
    ],
@@ -1028,6 +1047,13 @@
     "        print('Number of chickens : ', chickens)\n",
     "        \n",
     "farm_UI()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 그 외에 알아둘 점"
    ]
   },
   {
@@ -1133,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Module\n",
+    "## Module\n",
     "\n",
     "* 기본적으로 제공하는 Built-in function 외에도 module을 통하여 다양한 함수 제공\n",
     "\n",
@@ -1145,8 +1171,13 @@
     "   * 다양한 분포에 대한 random number를 활용할 수 있게 해주는 모듈\n",
     "   * https://docs.python.org/3/library/random.html\n",
     "\n",
-    "* import 명령을 사용하여 모듈을 불러와 사용\n",
-    "\n",
+    "* `import` 명령을 사용하여 모듈을 불러와 사용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Math module\n",
     "\n",
     "* ```import math```\n",
@@ -1286,103 +1317,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### division - 나누기\n",
-    "\n",
-    "* 다음은 Python 3.x에서는 해당되지 않는 내용이다.\n",
-    "\n",
-    "* Python 2.x에서는 나누기(```/```)를 사용시 기본적으로 정수를 먼저 반환하려고 함.\n",
-    "  * ```5/2 = 2```\n",
-    "* Python 2.x에서 실수 나누기를 하고 싶은 경우\n",
-    "  * ```5/2.0``` 혹은 ```5/float(2)```\n",
-    "\n",
-    "* 만약 Python 2.x에서 default로 실수를 반환하는 나누기(```/```)를 사용하고 싶을 때, 다음 ```import```문을 사용할 수 있음  \n",
-    "  * ```from __future__ import division```  \n",
-    "  \n",
-    "* 이 노트북은 Python 3를 기반으로 작성되었지만, Jupyter cell magic 중의 하나인 ```%%python2```를 이용하면 Python 2를 시험해 볼 수 있다.\n",
-    "  * Python 2가 설치되어 있지 않은 컴퓨터에서는 작동하지 않는다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%python2\n",
-    "\n",
-    "print(5/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.5\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%python2\n",
-    "\n",
-    "print(5/2.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.5\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%python2\n",
-    "\n",
-    "from __future__ import division\n",
-    "print(5/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%python2\n",
-    "\n",
-    "print(5//2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Random module\n",
     "\n",
     "* ```import random```\n",
@@ -1398,16 +1332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6355622417507467"
+       "0.5306616346508001"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,16 +1353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.871653464850869"
+       "7.364816301962892"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,16 +1373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,16 +1393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.205317944980681"
+       "-0.4658854780176727"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,12 +1417,12 @@
    "source": [
     "#### 예제 : 랜덤 숫자를 맞추는 프로그램\n",
     "\n",
-    "1부터 100까지의 숫자를 랜덤으로 생성 후 키보드 입력을 통해 그 숫자를 맞추는 프로그램\n"
+    "1부터 100까지의 숫자를 랜덤으로 생성 후 키보드 입력을 통해 그 숫자를 맞추는 프로그램"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,24 +1447,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  50\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Guess the number between 1 to 100 (type q to quit) : 50\n",
-      "The number is smaller than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 25\n",
-      "The number is smaller than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 12\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 18\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 21\n",
-      "The number is smaller than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 20\n",
+      "The number is larger than your guess, try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  75\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is smaller than your guess, try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  62\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is larger than your guess, try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  69\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is smaller than your guess, try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  65\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is larger than your guess, try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  67\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is larger than your guess, try again.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 to 100 (type q to quit) :  68\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Correct!\n"
      ]
     }
@@ -1543,14 +1557,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### t – 랜덤 변수\n",
+    "#### t – 랜덤 변수\n",
     "\n",
-    "* gauss() 함수와 gammavariate() 함수를 이용하여 t-분포를 따르는 랜덤 변수를 생성하는 함수"
+    "* `gauss()` 함수와 `gammavariate()` 함수를 이용하여 t-분포를 따르는 랜덤 변수를 생성하는 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,16 +1579,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.044457342435589894"
+       "-0.9651852373336636"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,21 +1601,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 모듈 파일을 불러오는 다양한 방법"
+    "### 모듈 파일을 불러오는 다양한 방법"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "5"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,16 +1627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "10"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,16 +1648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "5"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,8 +1684,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1689,7 +1705,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1703,9 +1719,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
