--- a/13.Hypothesis_test_and_inference.ipynb
+++ b/13.Hypothesis_test_and_inference.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 12. Hyperthesis test and inference"
+    "# 13. Hyperthesis test and inference"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     " * ```norm.pdf(x, loc=0, scale=1)```  : 확률밀도함수\n",
     " * ```norm.ppf(q, loc=0, scale=1)```  : 누적분포함수의 역함수\n",
     " \n",
-    "scipy.stats.norm에서 제공하는 함수와 직접 만든 함수를 비교해 보자."
+    "```scipy.stats.norm```에서 제공하는 함수와 직접 만든 함수를 비교해 보자."
    ]
   },
   {
@@ -181,7 +181,7 @@
     {
      "data": {
       "text/plain": [
-       "1.959991455078125"
+       "1.9599676132202148"
       ]
      },
      "execution_count": 7,
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "(469.00981403742765, 530.9901859625724)"
+       "(469.0101910103009, 530.9898089896991)"
       ]
      },
      "execution_count": 16,
@@ -397,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "526.0069061567574"
+       "526.00743391878"
       ]
      },
      "execution_count": 17,
@@ -415,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### p-value를 이용한 양측 검정\n",
+    "#### p-value를 이용한 양측 검정\n",
     "\n",
     "기각역을 찾는 대신 p-value를 이용하여 가설 검정"
    ]
@@ -449,7 +449,7 @@
     {
      "data": {
       "text/plain": [
-       "0.06207721579598857"
+       "0.06207721579598835"
       ]
      },
      "execution_count": 19,
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 단측 검정에서 p-value\n",
+    "#### 단측 검정에서 p-value\n",
     "\n",
     "기존의 normal_probability_above/below를 이용하여 p-value를 계산할 수 있다."
    ]
@@ -495,7 +495,7 @@
     {
      "data": {
       "text/plain": [
-       "0.06062885772582083"
+       "0.06062885772582072"
       ]
      },
      "execution_count": 21,
@@ -564,7 +564,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0502\n"
+      "0.0537\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500\n"
+      "539\n"
      ]
     }
    ],
@@ -610,11 +610,446 @@
     "num_rejections = len([experiment for experiment in experiments if reject_fariness(experiment)])\n",
     "print(num_rejections)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `scipy.stats`을 이용한 검정\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "`scipy.stats`는 데이터 분석 및 통계 모델링에 사용할 확률 분포 및 통계 함수에 대한 구현을 제공하는 SciPy내의 하위 모듈이다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [`ttest_1samp`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_1samp.html)\n",
+    "\n",
+    "```ttest_1samp``` 함수 : 한 그룹의 평균에 대한 t-검정을 수행.\n",
+    "\n",
+    "* 독립 관측치 ```a``` 표본의 기대값이 주어진 값인 $\\mu_0 = $```popmean```과 같다는 귀무 가설에 대한 검정\n",
+    "\n",
+    "* ```alternative``` 인자를 통해, ```{'two-sided', 'less', 'greater'}``` 하나를 선택할 수 있다. 기본값은 `two-sided`\n",
+    "\n",
+    "  * ```'two-sided'```:  $ H_1 : \\mu \\neq \\mu_0 $\n",
+    "\n",
+    "  * ```'less'```: $ H_1 : \\mu < \\mu_0 $\n",
+    "\n",
+    " * ```'greater'```: $ H_1 : \\mu > \\mu_0 $\n",
+    "\n",
+    "* t-통계량과 p-value를 반환한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "주어진 `data`에 대해 평균 $\\mu = 15$인지를 검정\n",
+    "\n",
+    "$$ H_0 : \\mu = 15$$\n",
+    "$$ H_1 : \\mu \\neq 15$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.23076923076923"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = [12, 12, 13, 13, 14, 14, 14, 14, 15, 15, 16, 16, 17]\n",
+    "np.mean(data1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-1.8057877962865403, pvalue=0.09608040334011646)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#perform one sample t-test\n",
+    "result = stats.ttest_1samp(a = data1, popmean=15)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위의 예제에서 $t$-검정통계량의 값과 $p$-값을 확인할 수 있다.\n",
+    "\n",
+    "다음과 같이 해당 attribute에 접근하여 값을 받아올 수도 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.8057877962865403"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09608040334011646"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.pvalue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "물론 $t$-통계량의 공식을 이용하여 직접 구할 수 있다.\n",
+    "\n",
+    "$$ T = \\frac{\\bar X - \\mu_0}{ \\frac{S}{\\sqrt{n}}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.80578779628654"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T0 = (np.mean(data1) - 15) / np.std(data1, ddof=1) * np.sqrt(len(data1))\n",
+    "T0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`scipy.stats.t.cdf` 함수를 이용하여 $p$-value를 계산할 수 있다. \n",
+    "양방향 검정이므로 곱하기 2를 취한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09608040334011649"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.t.cdf(T0, df = len(data1)-1) * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이번에는 단측 대립가설을 이용해 본다.\n",
+    "\n",
+    "$$ H_0 : \\mu = 15$$\n",
+    "$$ H_1 : \\mu < 15$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-1.8057877962865403, pvalue=0.04804020167005823)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_1samp(a = data1, popmean=15, alternative = 'less')  # less than 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04804020167005824"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# p-value\n",
+    "stats.t.cdf(T0, df = len(data1)-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다른 방향의 단측 대립가설:\n",
+    "\n",
+    "$$ H_0 : \\mu = 15$$\n",
+    "$$ H_1 : \\mu > 15$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-1.8057877962865403, pvalue=0.9519597983299417)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_1samp(a = data1, popmean=15, alternative = 'greater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9519597983299417"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# p-value\n",
+    "1 - stats.t.cdf(T0, df = len(data1)-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [`scipy.stats.ttest_ind`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_ind.html)\n",
+    "\n",
+    "```scipy.stats.ttest_ind``` : 독립인 두 그룹 평균 비교\n",
+    "\n",
+    "마찬가지로 `alternative` 인자를 통해, `{'two-sided', 'less', 'greater'}` 하나를 선택할 수 있다. 기본값은 `two-sided`\n",
+    "\n",
+    "* `two-sided` :  $H_1 : \\mu_1 \\neq \\mu_2 $\n",
+    " \n",
+    "* `less` :  $H_1 : \\mu_1 < \\mu_2 $\n",
+    " \n",
+    "* `greater`:  $H_1 : \\mu_1 > \\mu_2 $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.076923076923077"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = [13, 12, 11, 12, 14, 11, 15, 14, 11, 12, 18, 10, 17]\n",
+    "np.mean(data2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "양측 검정:\n",
+    "$$ H_0 : \\mu_1 = \\mu_2 $$\n",
+    "$$ H_1 : \\mu_1 \\neq \\mu_2 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=1.4467284665112357, pvalue=0.1609084742872385)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(a = data1, b = data2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "단측 검정의 경우 :\n",
+    "\n",
+    "$$ H_0 : \\mu_1 = \\mu_2 $$\n",
+    "$$ H_1 : \\mu_1 > \\mu_2 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=1.4467284665112357, pvalue=0.08045423714361925)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(a = data1, b = data2, alternative = 'greater')  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [`scipy.stats.ttest_rel`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_rel.html)\n",
+    "\n",
+    "`scipy.stats.ttest_rel` : 대응 2표본 검정 (쌍체 검정)\n",
+    "\n",
+    "`data1`과 `data2`가 대응 표본이라고 가정하고, 다음의 검정을 진행해 보자.\n",
+    "\n",
+    "$$ H_0 : \\mu_1 = \\mu_2 $$\n",
+    "$$ H_1 : \\mu_1 \\neq \\mu_2 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=1.8057877962865378, pvalue=0.04804020167005843)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_rel(a = data1, b = data2, alternative = 'greater')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -628,9 +1063,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
