--- a/05.Python_Loop.ipynb
+++ b/05.Python_Loop.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. 반복문\n",
+    "# 5. 반복문\n",
+    "---------------------\n",
     "\n",
     "프로그래밍을 하다보면, 같은 혹은 비슷한 코드를 여러 번 반복해야 할 경우가 있다.  \n",
     "반복문은 이러한 반복 작업을 효율적으로 진행할 수 있게 한다."
@@ -14,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ```while```\n",
+    "## ```while```\n",
     "\n",
     "같은 코드를 ```while```문을 이용하여 여러 번 실행할 수 있음  \n",
     "```while``` 루프 문은 주어진 조건이 참일 경우 목표 문장을 반복적으로 실행"
@@ -64,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### while문 문법\n",
+    "### while문 문법\n",
     "\n",
     "```\n",
     "while < test statement >:  \n",
@@ -78,7 +79,7 @@
     "    \n",
     "```while```문 내의 코드를 잘 작성하여 무한 루프(infinite loop)가 발생하지 않도록 주의\n",
     "\n",
-    "#### 무한 루프의 예\n",
+    "### 무한 루프의 예\n",
     "\n",
     "아래의 코드에서는 ```j```의 값에 변화가 없기 때문에 무한히 ```\"Hello world\"```를 출력.  \n",
     "만약 Code셀에서 아래의 프로그램을 실행해 보았다면, Juptyer notebook의 정사각형 버튼을 클릭하여 강제로 종료하도록 하자."
@@ -138,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 반복문 다시 살펴 보기"
+    "### 반복문 다시 살펴 보기"
    ]
   },
   {
@@ -178,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제"
+    "### 예제"
    ]
   },
   {
@@ -231,10 +232,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 반복문의 일반적 형태\n",
+    "### 반복문의 일반적 형태\n",
     "\n",
     "반복문을 설계하여야 할 때 다음 사항들을 생각해 보자.\n",
-    "* counter로 사용할 변수 설정\n",
+    "* counter로 사용할 변수 설정 \n",
     "* counter 변수를 반복문 바깥에서 초기화\n",
     "* 반복문이 언제 끝나야 하는지 결정하는 end-test 설정\n",
     "* 반복문 내에서 실행할 코드를 작성\n",
@@ -246,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 반복문 내의 반복문"
+    "### 반복문 내의 반복문"
    ]
   },
   {
@@ -264,21 +265,21 @@
    ],
    "source": [
     "x = 3\n",
-    "counter = 0\n",
+    "ans = 0\n",
     "while x>0:\n",
     "    y = 4\n",
     "    x -= 1\n",
     "    while y>0:\n",
-    "        counter += 1\n",
+    "        ans += 1\n",
     "        y -= 1\n",
-    "print(counter)"
+    "print(ans)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ```break```를 통한 ```while``` 벗어나기\n",
+    "### ```break```를 통한 ```while``` 벗어나기\n",
     "\n",
     "```break```를 이용하면 현재의 loop를 벗어날 수 있음\n",
     "\n",
@@ -313,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ```while```문을 통해 여러 번 입력 받기\n",
+    "### ```while```문을 통해 여러 번 입력 받기\n",
     "\n",
     "숫자를 다섯 개 입력 받아 총 합을 출력"
    ]
@@ -382,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ```while/else```\n",
+    "### ```while/else```\n",
     "\n",
     "Python에 있는 독특한 문법    \n",
     "```while```문의 반복 조건이 ```False```일 경우 ```else```문을 실행\n",
@@ -420,8 +421,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
+    "### 예제\n",
+    "\n",
     "#### 제곱근을 찾는 단순 반복문 프로그램\n",
     "\n",
     "다음의 프로그램은 x가 제곱수일 경우 정수인 제곱근을 찾아준다.\n",
@@ -479,11 +484,11 @@
     "increment = 1\n",
     "while increment >= 0.0001:\n",
     "    ans += increment\n",
-    "    if ans**2 == x:\n",
+    "    if ans ** 2 == x:\n",
     "        break\n",
-    "    elif ans**2 > x:\n",
+    "    elif ans ** 2 > x:\n",
     "        ans -= increment\n",
-    "        increment = increment/10.0\n",
+    "        increment = increment / 10.0\n",
     "print(ans)"
    ]
   },
@@ -520,7 +525,7 @@
    "source": [
     "x = 100\n",
     "divisor = 1\n",
-    "while divisor <= 100:\n",
+    "while divisor <= x:\n",
     "    if x % divisor == 0:\n",
     "        print(divisor)\n",
     "    divisor += 1"
@@ -530,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### for를 이용한 반복문"
+    "## for를 이용한 반복문"
    ]
   },
   {
@@ -633,8 +638,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제 \n",
-    "단어의 순서를 거꾸로 만들어 출력하기"
+    "### 예제 \n",
+    "\n",
+    "#### 단어의 순서를 거꾸로 만들어 출력하기"
    ]
   },
   {
@@ -691,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### range()의 다양한 활용\n",
+    "### range()의 다양한 활용\n",
     "\n",
     "Python 2의 ```range()```와 Python 3의 ```range()```는 약간의 차이가 있으나 그 용법은 거의 비슷하다."
    ]
@@ -783,7 +789,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제\n",
+    "### 예제\n",
+    "\n",
+    "#### 소수를 찾는 프로그램\n",
     "\n",
     "다음은 소수를 찾는 프로그램이다.\n",
     "\n",
@@ -793,15 +801,13 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 equals 2 * 5\n",
+      "10 equals 2 * 5.0\n",
       "11 is a prime number\n",
       "11 is a prime number\n",
       "11 is a prime number\n",
@@ -811,7 +817,7 @@
       "11 is a prime number\n",
       "11 is a prime number\n",
       "11 is a prime number\n",
-      "12 equals 2 * 6\n",
+      "12 equals 2 * 6.0\n",
       "13 is a prime number\n",
       "13 is a prime number\n",
       "13 is a prime number\n",
@@ -823,10 +829,10 @@
       "13 is a prime number\n",
       "13 is a prime number\n",
       "13 is a prime number\n",
-      "14 equals 2 * 7\n",
+      "14 equals 2 * 7.0\n",
       "15 is a prime number\n",
-      "15 equals 3 * 5\n",
-      "16 equals 2 * 8\n",
+      "15 equals 3 * 5.0\n",
+      "16 equals 2 * 8.0\n",
       "17 is a prime number\n",
       "17 is a prime number\n",
       "17 is a prime number\n",
@@ -842,7 +848,7 @@
       "17 is a prime number\n",
       "17 is a prime number\n",
       "17 is a prime number\n",
-      "18 equals 2 * 9\n",
+      "18 equals 2 * 9.0\n",
       "19 is a prime number\n",
       "19 is a prime number\n",
       "19 is a prime number\n",
@@ -865,10 +871,10 @@
    ],
    "source": [
     "for num in range(10, 20):  \n",
-    "    for i in range(2, num): \n",
-    "        if num%i == 0:      \n",
-    "            j=num/i\n",
-    "            print('%d equals %d * %d' % (num,i,j))\n",
+    "    for i in range(2, num):\n",
+    "        if num%i == 0: \n",
+    "            j = num / i\n",
+    "            print(f'{num} equals {i} * {j}')\n",
     "            break\n",
     "        else:\n",
     "            print(num, 'is a prime number')"
@@ -878,7 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 연습문제\n",
+    "## 연습문제\n",
     "\n",
     "* 1500에서 2700사이의 숫자 중에서 7로 나누어 떨어지고, 5의 배수인 모든 숫자를 출력하라."
    ]
@@ -990,11 +996,18 @@
    "source": [
     "* 주어진 정수를 이진수로 바꾸는 프로그램을 작성하라."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 임의의 자연수를 선택하여, 만약 짝수이면 2로 나누고, 홀수이면 3을 곱하고 1을 더하라. 이 과정을 반복하면 항상 1에 도달하는지 체크해 보라."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1008,9 +1021,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
