--- a/10.File_IO.ipynb
+++ b/10.File_IO.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9. Python에서의 파일 입출력"
+    "# 10. Python에서의 파일 입출력\n",
+    "----"
    ]
   },
   {
@@ -23,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 파일 열기\n",
+    "## 파일 열기\n",
     "\n",
     "* Python의 함수인 ```open```을 이용하여 파일을 열 수 있다.  \n",
     "https://docs.python.org/3/library/functions.html#open\n",
@@ -43,6 +44,22 @@
    "outputs": [],
    "source": [
     "a_file = open(file = 'ex1.csv', mode = 'r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "여기서 ```a_file```은 file object로서 사용자가 파일에 접근 및 조작할 수 있게 한다. \n",
+    "\n",
+    "```mode```는 어떤 목적으로 파일을 여는지 정하는 인자이다.\n",
+    "\n",
+    "* ```r```: 읽기 전용\n",
+    "* ```r+```: 읽기와 쓰기\n",
+    "* ```w```: 쓰기 전용\n",
+    "* ```w+```: 쓰기 및 읽기\n",
+    "* ```a```: append\n",
+    "* ```a+```: append 및 읽기"
    ]
   },
   {
@@ -406,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 파일 작성\n",
+    "## 파일 작성\n",
     "\n",
     "* 파일에 텍스트를 작성할 때도 ```open``` 함수를 이용한다.\n",
     "* 단, 이 경우에는 ```mode``` 인자가 ```w```가 된다."
@@ -499,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ```with```\n",
+    "## ```with```\n",
     "\n",
     "파일 사용을 마칠 때마다 ```close()```를 취하는 것이 번거롭다면 ```with```구문을 이용할 수 있다."
    ]
@@ -549,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제 : txt 파일을 읽고, 각 라인의 앞에 라인 번호 매기기"
+    "### 예제 : txt 파일을 읽고, 각 라인의 앞에 라인 번호 매기기"
    ]
   },
   {
@@ -622,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제 : 등장한 단어의 개수 세기\n",
+    "### 예제 : 등장한 단어의 개수 세기\n",
     "\n",
     "* ```.split()``` method를 이용하여, 각 단어를 공백 기준으로 나누어 list에 저장할 수 있다.\n",
     "* ```.strip(',.')```는 단어의 마지막에 등장하는 쉼표나 마침표를 제거한다.\n",
@@ -659,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### pandas와 DataFrame"
+    "## `pandas`와 `DataFrame`"
    ]
   },
   {
@@ -982,7 +999,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### JSON data"
+    "## JSON data"
    ]
   },
   {
@@ -1050,7 +1067,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1064,9 +1081,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
