--- a/14.Classes.ipynb
+++ b/14.Classes.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 13. Classes"
+    "# 14. Classes\n",
+    "---"
    ]
   },
   {
@@ -258,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Class 정의하기\n",
+    "## Class 정의하기\n",
     "* str, list, dictionary 등은 Python에서 제공하는 class이다.\n",
     "* 프로그래머가 자신의 class를 정의하여 사용할 수 있다. \n",
     "* Python 프로그래밍에 항상 새로운 class가 필요한 것은 아니다.\n",
@@ -406,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instance 생성하기\n",
+    "## Instance 생성하기\n",
     "\n",
     "* class 이름을 통해 새로운 instance를 생성할 수 있다. \n",
     "  * ```__init__(self, id)```이 생성자이지만, instance를 생성할 때 이 method를 직접 사용하지는 않는다.\n",
@@ -487,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 호출하기"
+    "## Method 호출하기"
    ]
   },
   {
@@ -626,7 +627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Class 다듬기\n",
+    "## Class 다듬기\n",
     "\n",
     "* 아래의 ```CorrectChair``` class에서는 ```_check``` 함수를 추가하여, 내리거나 타는 인원에 대한 정당성을 체크한다.\n",
     "  * ```_```로 시작하는 attribute나 method는 class 내에서만 private하게 사용할 것을 권고한다.\n",
@@ -793,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subclass\n",
+    "## Subclass\n",
     "\n",
     "여섯 명까지 탈 수 있는 chair를 만든다고 하자.  \n",
     "이 때 새로운 class를 만들 필요없이, 기존의 ```CorrectChair```를 상속하여, ```max_occupants```만 override하여 사용한다.\n",
@@ -908,7 +909,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -922,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
